# fovea

./: .gitignore  CREDITS.md  FoveaApp.swift  LICENSE  README.md  adjustments.py  analyzer.py  app.py  build_macos.sh  config.py  converter.py  dng_writer.py  fovea.icns  importer.py  library.py  main.py  models.py  pyproject.toml  requirements.txt  run.sh  scanner.py  setup_server.py
static/: index.html
tests/: test_pipeline.py
